# BinaryConverter

./: .gitignore  App.cpp  App.hpp  Backend.cpp  Backend.hpp  CMakeLists.txt  Converter.cpp  Converter.hpp  Frame.cpp  Frame.hpp  Helpers.hpp  IBackend.hpp  IConverter.hpp  IFrontend.hpp  IReceiver.hpp
Frontends/wxWidgets/: App.cpp  App.hpp  CMakeLists.txt  Enums.hpp  Frame.cpp  Frame.hpp
Frontends/xtd/: CMakeLists.txt  Form.cpp  Form.hpp  main.cpp
Tests/: CMakeLists.txt  ConverterUT.cpp  DummyFrontend.hpp
